testsuite/tests/typecheck/should_fail/tcfail001.alan
hello () : proc
	foo : int;
{
	foo = 5262147483648;
}
